# bodies-ras-2015

./: README.md
data/: indices_no_hands_feet.indices  indices_no_hands_feet_head.indices  motion.pca  skeleton.fbx
openni_nite_acquisition/: CMakeLists.txt  main.cpp
tracking/: CMakeLists.txt
tracking/cmake/: FindFBX.cmake  FindQGLViewer.cmake
tracking/include/: FbxIOBasic.h  Fbx_IO.h  SkeletonIOFbx.h  blendshape_model.h  bodies_utils.h  common.h  contours.h  mesh.h  skeleton.h  skeleton_mesh.h  visualization_utils.h
tracking/include/impl/: blendshape_model.hpp  mesh.hpp
tracking/src/: blendshape_model.cpp  bodies_utils.cpp  common.cpp  contours.cpp  main_build_body_pose_pca_model_eigen.cpp  main_process_results.cpp  main_tracking_modeling_offline.cpp  main_tracking_modeling_online.cpp  skeleton.cpp  skeleton_mesh.cpp  visualization_utils.cpp
